--- a/web/modules/bpmn/index.html
+++ b/web/modules/bpmn/index.html
@@ -5,7 +5,7 @@
     <title>Grapheditor</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" type="text/css" href="assets/js/bpmn_editor/styles/grapheditor.css">
+    <link rel="stylesheet" type="text/css" href="/assets/js/bpmn_editor/styles/grapheditor.css">
 	<script type="text/javascript">
 		// Parses URL parameters. Supported parameters are:
 		// - lang=xy: Specifies the language of the user interface.
@@ -37,23 +37,23 @@
 	
 		// Default resources are included in grapheditor resources
 		mxLoadResources = false;
-		mxBasePath = "assets/js/mxgraph/";
-		bpmnEditorBasePath = "assets/js/bpmn_editor/"
+		mxBasePath = "/assets/js/mxgraph/";
+		bpmnEditorBasePath = "/assets/js/bpmn_editor/"
 	</script>
-	<script type="text/javascript" src="assets/js/bpmn_editor/js/mxeditor/Init.js"></script>
-	<script type="text/javascript" src="assets/js/bpmn_editor/js/deflate/pako.min.js"></script>
-	<script type="text/javascript" src="assets/js/bpmn_editor/js/deflate/base64.js"></script>
-	<script type="text/javascript" src="assets/js/bpmn_editor/js/sanitizer/sanitizer.min.js"></script>
-	<script type="text/javascript" src="assets/js/mxgraph/js/mxClient.js"></script>
-	<script type="text/javascript" src="assets/js/bpmn_editor/js/mxeditor/EditorUi.js"></script>
-	<script type="text/javascript" src="assets/js/bpmn_editor/js/mxeditor/Editor.js"></script>
-	<script type="text/javascript" src="assets/js/bpmn_editor/js/mxeditor/Sidebar.js"></script>
-	<script type="text/javascript" src="assets/js/bpmn_editor/js/mxeditor/Graph.js"></script>
-	<script type="text/javascript" src="assets/js/bpmn_editor/js/mxeditor/Shapes.js"></script>
-	<script type="text/javascript" src="assets/js/bpmn_editor/js/mxeditor/Actions.js"></script>
-	<script type="text/javascript" src="assets/js/bpmn_editor/js/mxeditor/Menus.js"></script>
-	<script type="text/javascript" src="assets/js/bpmn_editor/js/mxeditor/Toolbar.js"></script>
-	<script type="text/javascript" src="assets/js/bpmn_editor/js/mxeditor/Dialogs.js"></script>
+	<script type="text/javascript" src="/assets/js/bpmn_editor/js/mxeditor/Init.js"></script>
+	<script type="text/javascript" src="/assets/js/bpmn_editor/js/deflate/pako.min.js"></script>
+	<script type="text/javascript" src="/assets/js/bpmn_editor/js/deflate/base64.js"></script>
+	<script type="text/javascript" src="/assets/js/bpmn_editor/js/sanitizer/sanitizer.min.js"></script>
+	<script type="text/javascript" src="/assets/js/mxgraph/js/mxClient.js"></script>
+	<script type="text/javascript" src="/assets/js/bpmn_editor/js/mxeditor/EditorUi.js"></script>
+	<script type="text/javascript" src="/assets/js/bpmn_editor/js/mxeditor/Editor.js"></script>
+	<script type="text/javascript" src="/assets/js/bpmn_editor/js/mxeditor/Sidebar.js"></script>
+	<script type="text/javascript" src="/assets/js/bpmn_editor/js/mxeditor/Graph.js"></script>
+	<script type="text/javascript" src="/assets/js/bpmn_editor/js/mxeditor/Shapes.js"></script>
+	<script type="text/javascript" src="/assets/js/bpmn_editor/js/mxeditor/Actions.js"></script>
+	<script type="text/javascript" src="/assets/js/bpmn_editor/js/mxeditor/Menus.js"></script>
+	<script type="text/javascript" src="/assets/js/bpmn_editor/js/mxeditor/Toolbar.js"></script>
+	<script type="text/javascript" src="/assets/js/bpmn_editor/js/mxeditor/Dialogs.js"></script>
 </head>
 <body class="geEditor">
 <script type="text/javascript">
