--- a/web/modules/bpmn/index.html
+++ b/web/modules/bpmn/index.html
@@ -40,6 +40,7 @@
 		mxBasePath = "/assets/js/mxgraph/";
 		bpmnEditorBasePath = "/assets/js/bpmn_editor/"
 	</script>
+	<script type="text/javascript" src="/assets/js/axios.min.js"></script>
 	<script type="text/javascript" src="/assets/js/bpmn_editor/js/mxeditor/Init.js"></script>
 	<script type="text/javascript" src="/assets/js/bpmn_editor/js/deflate/pako.min.js"></script>
 	<script type="text/javascript" src="/assets/js/bpmn_editor/js/deflate/base64.js"></script>
